add(rewards): mascot card learn more link

--- a/src/legends/modules/legends/components/Card/CardAction/actions/Action.module.scss
+++ b/src/legends/modules/legends/components/Card/CardAction/actions/Action.module.scss
@@ -119,3 +119,11 @@
     color: $primaryText;
   }
 }
+
+.link {
+  text-decoration: underline;
+  font-size: 1rem;
+  font-weight: 400;
+  color: $secondaryText;
+  flex: 1;
+}
