--- a/src/legends/modules/Home/components/CharacterSection/CharacterSection.module.scss
+++ b/src/legends/modules/Home/components/CharacterSection/CharacterSection.module.scss
@@ -5,7 +5,7 @@
 }
 
 .overachieverWrapper {
-  @include  container;
+  @include container;
   @include breakpoint-down-from(medium-desktop) {
     margin-left: 3rem;
   }
@@ -16,7 +16,6 @@
 }
 .overachieverBanner {
   margin-bottom: 1.875rem;
-  
 }
 .rewardsWrapper {
   position: relative;
@@ -41,11 +40,11 @@
   max-width: 63.375rem;
   margin-bottom: 8.5rem;
   margin-top: 1.875rem;
-  gap: .9375rem;
-  background: #20212B;
-  border: 1px solid #6A6F8633;
+  gap: 0.9375rem;
+  background: #20212b;
+  border: 1px solid #6a6f8633;
   border-radius: 1.5rem;
-  padding: .75rem;
+  padding: 0.75rem;
 
   .accountBaseInfoWrapper {
     display: flex;
@@ -54,11 +53,11 @@
   }
 
   .accountInfoWrapper {
-    background: linear-gradient(147.96deg, #191B1F 43.03%, rgba(19, 21, 43, 0.99) 87.21%);
+    background: linear-gradient(147.96deg, #191b1f 43.03%, rgba(19, 21, 43, 0.99) 87.21%);
     border-radius: 1rem;
     padding: 1rem 1.75rem 1.75rem 1.75rem;
     color: $secondaryText;
-    margin-bottom: .9375rem;
+    margin-bottom: 0.9375rem;
     flex: 0.35;
     display: flex;
     justify-content: space-between;
@@ -67,16 +66,15 @@
     .accountInfo {
       font-size: 1.125rem;
       padding: 0;
-      
+
       .accountInfoAddress {
         color: $secondaryText;
       }
     }
   }
 
-
   .walletBalanceWrapper {
-    background: linear-gradient(147.96deg, #191B1F 43.03%, rgba(19, 21, 43, 0.99) 87.21%);
+    background: linear-gradient(147.96deg, #191b1f 43.03%, rgba(19, 21, 43, 0.99) 87.21%);
     border-radius: 1rem;
     color: $secondaryText;
     padding: 1.25rem 1.6875rem;
@@ -84,13 +82,12 @@
     flex: 0.65;
   }
 
-
-   .rewardsProjectionWrapper {
+  .rewardsProjectionWrapper {
     position: relative;
     background-clip: padding-box, border-box;
     background-origin: padding-box, border-box;
-    background-image: linear-gradient(91.56deg, #20212B 1.37%, #33257E 78.47%), 
-              linear-gradient(89.79deg, #20212B 15.28%, #5C4EAB 99.82%);
+    background-image: linear-gradient(91.56deg, #20212b 1.37%, #33257e 78.47%),
+      linear-gradient(89.79deg, #20212b 15.28%, #5c4eab 99.82%);
 
     padding: 2.0625rem 1.5rem;
     border-radius: 1rem;
@@ -98,7 +95,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 
     .starsBackground {
       position: absolute;
@@ -113,12 +109,11 @@
 
     .rewardsTitle {
       font-weight: 300;
-      font-size: .8125rem;
+      font-size: 0.8125rem;
       line-height: 1.125rem;
       letter-spacing: 0%;
       text-align: center;
       max-width: 13.9375rem;
-
     }
     .rewardsProjectionTitleWrapper {
       display: flex;
@@ -126,94 +121,89 @@
       margin-bottom: 1.875rem;
 
       .rewardsProjectionTitle {
-        color: #8E98A8;
-        font-size: .875rem;
+        color: #8e98a8;
+        font-size: 0.875rem;
         line-height: 1rem;
         font-weight: 300;
       }
 
       .infoIcon {
-        margin-left: .375rem;
-        color: #8E98A8;
+        margin-left: 0.375rem;
+        color: #8e98a8;
         vertical-align: middle;
-      }   
+      }
     }
 
-     .rewardsProjectionStats {
+    .rewardsProjectionStats {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .projectionStatLabel {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: $whiteText;
         display: flex;
-        flex-direction: column;
         align-items: center;
+        gap: 0.5625rem;
 
-        .projectionStatLabel {
-          font-size: 1.5rem;
-          font-weight: 400;
-          color: $whiteText;
+        .ambireLogoWrapper {
           display: flex;
+          justify-content: center;
           align-items: center;
-          gap: .5625rem;
-
-          .ambireLogoWrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: $whiteText;
-            border-radius: 50%;
-            width: 1rem;
-            height: 1rem;
-          }
-          
-        }
-
-        .projectionStatValue {
-          color: #BA6DFF;
-          font-size: 2rem;
-          line-height: 2.75rem;
-          font-weight: 500;
-        }
-
-        .projectionStatPriceValue {
-          font-size: 1.125rem;
-          font-weight: 500;
-          color: #8947C0;
+          background: $whiteText;
+          border-radius: 50%;
+          width: 1rem;
+          height: 1rem;
         }
       }
 
+      .projectionStatValue {
+        color: #ba6dff;
+        font-size: 2rem;
+        line-height: 2.75rem;
+        font-weight: 500;
+      }
 
-      .apyWrapper {
+      .projectionStatPriceValue {
+        font-size: 1.125rem;
+        font-weight: 500;
+        color: #8947c0;
+      }
+    }
+
+    .apyWrapper {
+      display: flex;
+      gap: 1rem;
+      margin-top: 2.6875rem;
+      align-items: center;
+      z-index: 3;
+
+      .apyTitleWrapper {
         display: flex;
-        gap: 1rem;
-        margin-top: 2.6875rem;
         align-items: center;
-        z-index: 3;
-        
-        .apyTitleWrapper {
-          display: flex;
-          align-items: center;
-          
-          .apyTitle {
-            color: #8E98A8;
-            font-size: .875rem;
-            line-height: 1rem;
-            font-weight: 300;
-            
-          }
-          
-          .infoIcon {
-            margin-left: .375rem;
-            color: #8E98A8;
-            vertical-align: middle;
-          }      
 
+        .apyTitle {
+          color: #8e98a8;
+          font-size: 0.875rem;
+          line-height: 1rem;
+          font-weight: 300;
         }
-      
-        .apyValue {
-          color: #03FAC4;
-          font-size: .875rem;
-          font-weight: 400;
-          // line-height: 2.75rem;
+
+        .infoIcon {
+          margin-left: 0.375rem;
+          color: #8e98a8;
+          vertical-align: middle;
         }
       }
-        
+
+      .apyValue {
+        color: #03fac4;
+        font-size: 0.875rem;
+        font-weight: 400;
+        // line-height: 2.75rem;
+      }
+    }
   }
 
   .substractBackground {
@@ -228,8 +218,8 @@
     border-radius: 1rem;
   }
 
-
-  .multiplicationIcon, .equalIcon {
+  .multiplicationIcon,
+  .equalIcon {
     position: absolute;
     top: 50%;
     right: 0;
@@ -237,7 +227,8 @@
     z-index: 2;
   }
 
-  .multiplicationIcon, .equalIcon {
+  .multiplicationIcon,
+  .equalIcon {
     right: -75px;
   }
   .characterWrapper {
@@ -262,15 +253,15 @@
         align-items: center;
 
         .startXp {
-          font-size: .625rem;
-          line-height: .75rem;
-          color: #8E98A8;
-          margin-bottom: .25rem;
+          font-size: 0.625rem;
+          line-height: 0.75rem;
+          color: #8e98a8;
+          margin-bottom: 0.25rem;
           font-weight: 400;
         }
         .level {
           color: $mainText;
-          font-size: .75rem;
+          font-size: 0.75rem;
           font-weight: 300;
           line-height: 1rem;
           text-align: left;
@@ -306,7 +297,7 @@
           .level {
             color: $mainText;
             z-index: 3;
-            font-size: .75rem;
+            font-size: 0.75rem;
             font-weight: 300;
           }
         }
@@ -338,30 +329,30 @@
       height: 100%;
       width: 100%;
       z-index: 1;
-      
+
       .characterRelativeWrapper {
         display: flex;
         flex-direction: row-reverse;
         align-self: flex-start;
         padding-left: 1.25rem;
       }
-      
+
       .currentSeasonBadge {
         margin-bottom: 1.4375rem;
         width: fit-content;
         background-color: $purple-700;
-        padding: .31rem .7rem;
-        border-bottom-right-radius: .5rem;
-        border-bottom-left-radius: .5rem;
+        padding: 0.31rem 0.7rem;
+        border-bottom-right-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
         box-shadow: 0px 4px 4px 0px #00000040 inset;
-        gap: .3125rem;
+        gap: 0.3125rem;
         display: flex;
         color: $whiteText;
         align-self: center;
-        font-size: .75rem;
+        font-size: 0.75rem;
         font-weight: 500;
         line-height: 100%;
-        letter-spacing: .0375rem;
+        letter-spacing: 0.0375rem;
         align-items: center;
       }
 
@@ -372,75 +363,66 @@
 
         .characterName {
           color: $mainText;
-          font-size: .75rem;
-          margin-top: .5rem;
+          font-size: 0.75rem;
+          margin-top: 0.5rem;
           max-width: 3.125rem;
         }
 
         .characterLevel {
-          color: #8E98A8;
-          font-size: .875rem;
+          color: #8e98a8;
+          font-size: 0.875rem;
           display: flex;
           flex-direction: column;
           align-items: end;
           margin-top: auto;
           margin-bottom: auto;
           .characterLevelText {
-            color: #FFFFFF;
+            color: #ffffff;
             font-size: 1.75rem;
           }
         }
       }
-      
+
       .characterImage {
         position: relative;
         width: 12.9rem;
         height: 12.9rem;
       }
     }
-    
-   
 
-  // old styles below
+    // old styles below
 
-  
-  .logoAndBalanceWrapper {
-    display: inline-block;
-    position: relative;
-  }
+    .logoAndBalanceWrapper {
+      display: inline-block;
+      position: relative;
+    }
 
-  
-  .characterInfo {
-    position: relative;
-    z-index: 2;
+    .characterInfo {
+      position: relative;
+      z-index: 2;
 
-  
+      .characterInfoWrapper {
+        display: flex;
+        align-items: center;
+        gap: 0.3125rem;
 
-    .characterInfoWrapper {
-      display: flex;
-      align-items: center;
-      gap: 0.3125rem;
-
-      .infoIcon {
-        color: $secondaryText;
-        cursor: pointer;
+        .infoIcon {
+          color: $secondaryText;
+          cursor: pointer;
+        }
       }
-    }
 
-   
+      .accountInfoAddress {
+        color: $secondaryText;
+      }
 
-    .accountInfoAddress {
-      color: $secondaryText;
-    }
+      .kicker {
+        font-size: 2.5rem;
+        font-weight: 400;
+        color: $whiteText;
+        margin-bottom: 6.5625rem;
+      }
 
-    .kicker {
-      font-size: 2.5rem;
-      font-weight: 400;
-      color: $whiteText;
-      margin-bottom: 6.5625rem;
-    }
-
-    
       .item {
         min-width: 8.75rem;
         padding: 0.5rem 1.5rem;
@@ -484,105 +466,97 @@
     }
   }
 
+  .characterStatsWrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.9375rem;
 
-
-   .characterStatsWrapper {
-      position: relative;
+    .characterStats {
+      z-index: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      gap: .9375rem;
-    
-      .characterStats {
-        z-index: 1;
+      justify-content: center;
+    }
+    .infoWrapper {
+      color: #8e98a8;
+      font-size: 0.875rem;
+      line-height: 1.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .infoIcon {
+        margin-left: 0.375rem;
+        vertical-align: middle;
+      }
+    }
+
+    .balanceAmount {
+      color: $mainText;
+      display: inline-block;
+      font-size: 1.75rem;
+    }
+    .accruidedXpWrapper {
+      margin-bottom: 0.75rem;
+      .accruedXpLabel {
+        font-size: 0.875rem;
+        color: #8e98a8;
+      }
+      .infoIcon {
+        margin-left: 0.375rem;
+        color: #8e98a8;
+        vertical-align: middle;
+      }
+    }
+
+    .characterItemWrapper {
+      display: flex;
+
+      .icon {
+        margin-right: 1.5625rem;
+      }
+      .iconCoin {
+        align-self: center;
+      }
+
+      .characterItem {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      .infoWrapper {
-        color: #8E98A8;
-        font-size: .875rem;
+        font-size: 0.875rem;
+        font-weight: 300;
         line-height: 1.5rem;
+        color: $mainText;
+        align-self: end;
+      }
+    }
+
+    .leaderboardWrapper {
+      .leaderboardInfoWrapper {
         display: flex;
         align-items: center;
-        justify-content: center;
+        gap: 0.375rem;
+        color: #8e98a8;
 
         .infoIcon {
-          margin-left: .375rem;
+          color: #8e98a8;
           vertical-align: middle;
         }
       }
 
-      .balanceAmount {
-        color: $mainText;
-        display: inline-block;
-        font-size: 1.75rem;
-      }
-      .accruidedXpWrapper {
-        margin-bottom: .75rem;
-        .accruedXpLabel {
-          font-size: .875rem;
-          color: #8E98A8;
-
-        }
-        .infoIcon {
-          margin-left: .375rem;
-          color: #8E98A8;
-          vertical-align: middle;
+      .leaderboardRank {
+        line-height: 2.75rem;
+        font-size: 1.5rem;
+        .trophyIcon {
+          color: $neutral-600;
+          margin-right: 0.75rem;
         }
       }
-
-      .characterItemWrapper {
-        display: flex;
-
-        .icon {
-          margin-right: 1.5625rem;
-        }
-        .iconCoin {
-          align-self: center;
-        }
-
-        .characterItem {
-          display: flex;
-          flex-direction: column;
-          font-size: 0.875rem;
-          font-weight: 300;
-          line-height: 1.5rem;
-          color: $mainText;
-          align-self: end;
-        }
-      }
-      
-      
-        .leaderboardWrapper {
-
-          .leaderboardInfoWrapper {
-            display: flex;
-            align-items: center;
-            gap: .375rem;
-            color: #8E98A8;
-
-            .infoIcon {
-              color: #8E98A8;
-              vertical-align: middle;
-            }
-          }
-
-          .leaderboardRank {
-            line-height: 2.75rem;
-            font-size: 1.5rem;
-            .trophyIcon {
-              color: $neutral-600;
-              margin-right: .75rem;
-            }
-          }
-        }
-    
+    }
   }
-
- 
 
   .characterBlurEffect {
     position: absolute;
@@ -598,26 +572,21 @@
     transform: scaleX(-1);
   }
 
-  
   @include breakpoint-down-from(medium-desktop) {
     margin-left: 3rem;
     margin-right: 3rem;
     width: calc(100% - 6rem);
     grid-template-columns: 32% 32% 32%;
-
   }
 
   @include breakpoint-from(small-desktop) {
-
     .currentSeasonBadge {
       top: -2.75rem;
     }
-
   }
-  
+
   @include breakpoint-down-from(small-desktop) {
     padding-bottom: 1rem;
-
 
     .substractBackground {
       background-size: 100% 100%;
@@ -625,15 +594,13 @@
     .character {
       margin-left: 0;
     }
-    
-    
+
     .characterLevelInfoWrapper {
       flex-direction: row;
       flex-wrap: wrap;
       gap: 1rem;
     }
     .characterInfo {
-
       .characterName {
         font-size: 3rem;
       }
@@ -650,13 +617,10 @@
           height: 4.6875rem;
         }
       }
-
-     
     }
   }
 
   @include breakpoint-down-from(large-tablet) {
-
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
     gap: 0.5rem;
@@ -664,12 +628,10 @@
 
   @include breakpoint-down-from(tablet) {
     padding-left: 3rem;
-    grid-template-columns: 1fr ;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
 
-
     .character {
-
       .characterImage {
         width: 10.9rem;
         height: 10.9rem;
@@ -678,11 +640,14 @@
     .substractBackground {
       background-size: 100% 100%;
     }
-    .characterWrapper, .characterStatsWrapper, .rewardsProjectionWrapper {
+    .characterWrapper,
+    .characterStatsWrapper,
+    .rewardsProjectionWrapper {
       height: 20rem;
     }
 
-    .multiplicationIcon, .equalIcon {
+    .multiplicationIcon,
+    .equalIcon {
       right: 50%;
       top: 0;
       bottom: 0;
@@ -694,21 +659,17 @@
       top: 90%;
     }
 
-
     .multiplicationIcon {
       top: 105%;
       transform: translate(0, -50%);
     }
-
-    
   }
 }
-
 
 .unknownCharacterWrapper {
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(147.96deg, #191B1F 43.03%, rgba(19, 21, 43, 0.99) 87.21%);
+  background: linear-gradient(147.96deg, #191b1f 43.03%, rgba(19, 21, 43, 0.99) 87.21%);
   position: relative;
   padding: 0rem 2.5rem 0rem 2.375rem;
   border-radius: 1rem;
@@ -717,50 +678,47 @@
     display: flex;
     justify-content: space-between;
     flex: 1;
-    
-    .unknownCharacterContent {
 
+    .unknownCharacterContent {
       .currentSeasonBadge {
         margin-bottom: 1.5rem;
         width: fit-content;
         background-color: $purple-700;
-        padding: .35rem .7rem;
-        border-bottom-right-radius: .5rem;
-        border-bottom-left-radius: .5rem;
+        padding: 0.35rem 0.7rem;
+        border-bottom-right-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
         box-shadow: 0px 4px 4px 0px #00000040 inset;
-        gap: .3125rem;
+        gap: 0.3125rem;
         display: flex;
         color: $whiteText;
         align-self: center;
-        font-size: .75rem;
+        font-size: 0.75rem;
         font-weight: 500;
         line-height: 100%;
-        letter-spacing: .0375rem;
+        letter-spacing: 0.0375rem;
         align-items: center;
-      } 
+      }
 
       .accountInfo {
         font-size: 1.125rem;
         padding: 0;
         margin-bottom: 1.5rem;
         width: fit-content;
-        
+
         .accountInfoAddress {
           color: $secondaryText;
         }
       }
 
-
       .unknownCharacterLevelInfoWrapper {
-
         .claimableXpText {
           font-size: 1.5rem;
           line-height: 2.75rem;
           font-weight: 400;
-          margin-bottom: .625rem;
+          margin-bottom: 0.625rem;
         }
         .claimableBalance {
-          color: #02F3BF;
+          color: #02f3bf;
           font-weight: 600;
         }
         .claimXpButton {
@@ -773,9 +731,7 @@
           margin-bottom: 2.8125rem;
         }
       }
-
     }
-        
   }
 
   .claimRewardsBubble {
@@ -789,18 +745,16 @@
     padding-right: 1.5rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
-    
+
     background: linear-gradient(90deg, rgba(106, 111, 134, 0.3) 0%, rgba(25, 27, 32, 0.3) 100%);
 
     .claimRewardsBubbleText {
       font-weight: 400;
-      font-size: .75rem;
+      font-size: 0.75rem;
       vertical-align: middle;
       color: $alternativeText;
     }
   }
-
-
 
   .character {
     margin-left: 0;
@@ -819,7 +773,7 @@
   }
 
   .characterPodium {
-    background-image: linear-gradient(180deg, #C587C5 17.31%, #0F03A4 100%);
+    background-image: linear-gradient(180deg, #c587c5 17.31%, #0f03a4 100%);
     filter: blur(5.6px);
 
     width: 12.5625rem;
@@ -837,7 +791,15 @@
     border: 0.25rem solid transparent;
     background-clip: padding-box, border-box;
     background-origin: padding-box, border-box;
- 
-
   }
+}
+.defaultCharacter {
+  transition: transform 0.2s ease-out, box-shadow 0.2s ease-out;
+}
+
+.defaultCharacter:hover,
+.defaultCharacter:focus {
+  transform: scale(1.02);
+  filter: brightness(1.05); /* makes it 10% lighter */
+  cursor: pointer;
 }
