--- a/src/legends/styles/mixins.scss
+++ b/src/legends/styles/mixins.scss
@@ -24,7 +24,7 @@
   padding: 1rem;
   transition: background 0.3s ease;
   background-blend-mode: overlay;
-  background: linear-gradient(100.29deg, $green-500 7.82%, $teal 49.79%, $dark-purple 92.28%);
+  background: linear-gradient(81.89deg, #00d5ff 5.63%, #a25aff 95.17%);
 
   &:not(:disabled) {
     &:hover {
