--- a/src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
+++ b/src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
@@ -50,6 +50,7 @@
       display: flex;
       width: 100%;
       align-items: center;
+      min-height: 1.5rem;
 
       span {
         font-size: 0.8125rem;
