--- a/src/legends/components/Season2Modal/Season2Modal.module.scss
+++ b/src/legends/components/Season2Modal/Season2Modal.module.scss
@@ -30,7 +30,7 @@
       font-size: 1rem;
       letter-spacing: 5%;
       font-weight: 600;
-      color: #855dff;
+      color: $purple-500;
       text-decoration: underline;
     }
   }
