--- a/src/legends/modules/legends/components/Card/HowTo/HowTo.module.scss
+++ b/src/legends/modules/legends/components/Card/HowTo/HowTo.module.scss
@@ -90,7 +90,7 @@
     .image {
       width: 100%;
       height: auto;
-      border: 0.0625rem solid #6a6f8633;
+      border: 0.0625rem solid rgba($neutral-600, 0.2);
     }
 
     .video {
