--- a/src/legends/modules/legends/components/Card/CardAction/actions/Action.module.scss
+++ b/src/legends/modules/legends/components/Card/CardAction/actions/Action.module.scss
@@ -56,11 +56,11 @@
       padding-left: 1.5rem;
       gap: 0.625rem;
       display: flex;
-      background-color: #6a6f8633;
+      background-color: rgba($neutral-600, 0.2);
       align-items: center;
 
       p {
-        color: #a182ff;
+        color: $purple-400;
         font-family: monospace;
         font-weight: 500;
         font-style: Medium;
@@ -95,10 +95,10 @@
       padding-left: 1.5rem;
       gap: 0.625rem;
       display: flex;
-      background-color: #6a6f8633;
+      background-color: rgba($neutral-600, 0.2);
       align-items: center;
       p {
-        color: #a182ff;
+        color: $purple-400;
         font-weight: 500;
         font-style: Medium;
         font-size: 1.5rem;
