--- a/src/legends/modules/legends/components/MigrateRewardsModal/MigrateRewardsModal.module.scss
+++ b/src/legends/modules/legends/components/MigrateRewardsModal/MigrateRewardsModal.module.scss
@@ -27,8 +27,8 @@
   border: 0.25rem solid transparent;
   background-clip: padding-box, border-box;
   background-origin: padding-box, border-box;
-  background-image: linear-gradient($secondaryBackground, $secondaryBackground), 
-                    linear-gradient(152.35deg, rgba(207, 162, 255, 0.6) 9.38%, rgba(78, 25, 168, 0.6) 96.89%);
+  background-image: linear-gradient($secondaryBackground, $secondaryBackground),
+    linear-gradient(152.35deg, rgba(207, 162, 255, 0.6) 9.38%, rgba(78, 25, 168, 0.6) 96.89%);
 
   .backgroundEffect {
     position: absolute;
@@ -44,7 +44,7 @@
 
   .closeButton {
     font-size: inherit;
-    margin-right: .5625rem;
+    margin-right: 0.5625rem;
     margin-top: 0.813em;
     margin-left: auto;
     display: block;
@@ -57,74 +57,70 @@
     }
   }
   .contentWrapper {
-      position: relative;
-      width: 100%;
-      height: 100%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 2rem;
+    justify-content: space-between;
+    .title {
+      font-size: 2.5rem;
+      font-weight: 400;
+      line-height: 1;
+      margin: 0 auto;
+      color: $whiteText;
+      margin-bottom: 1.5625rem;
+      text-align: center;
+    }
+    .content {
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      padding: 0 2rem;
-    justify-content: space-between;
-      .title {
-          font-size: 2.5rem;
-          font-weight: 400;
-          line-height: 1;
-          margin: 0 auto;
-          color: $whiteText;
-          margin-bottom: 1.5625rem;
-          text-align: center;
-      }
-      .content {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          align-items: center;
-          
-          
-        
 
-    .sectionTitle {
-      font-size: .875rem;
-      line-height: 1.5rem;
-      // text-align: center;
+      .sectionTitle {
+        font-size: 0.875rem;
+        line-height: 1.5rem;
+        // text-align: center;
+        color: $secondaryText;
+        margin-bottom: 0.125rem;
+      }
+
+      .sectionContent {
+        border: 1px solid rgba($neutral-600, 0.2);
+        padding: 1rem;
+        width: 13rem;
+        border-radius: 0.5rem;
+        align-self: center;
+        text-align: center;
+        margin-bottom: 1.5rem;
+
+        .usdValue {
+          font-size: 1rem;
+          color: $neutral-450;
+        }
+      }
+    }
+    .noWalletTitle {
+      font-weight: 400;
+      font-size: 1.5rem;
+      line-height: 2.75rem;
       color: $secondaryText;
-      margin-bottom: .125rem;
     }
-
-    .sectionContent {
-      border: 1px solid #6A6F8633;
-      padding: 1rem;
-      width: 13rem;
-      border-radius: .5rem;
-      align-self: center;
-      text-align: center;
-      margin-bottom: 1.5rem;
-
-      
-      .usdValue {
-        font-size: 1rem;
-        color: #8E98A8;
-      }
-    }
-  }
-  .noWalletTitle {
-    font-weight: 400;
-    font-size: 1.5rem;
-    line-height: 2.75rem;
-    color: $secondaryText;
-  }
     .button {
       @include primary-button;
       min-width: 30.875rem;
       width: fit-content;
-      font-size: 1.25rem; 
-      font-weight: 400; 
+      font-size: 1.25rem;
+      font-weight: 400;
       margin-bottom: 2rem;
     }
   }
 }
 
-.alreadyMigratedWarning{
+.alreadyMigratedWarning {
   text-align: center;
   max-width: 75%;
   font-size: 0.85rem;
