--- a/src/legends/modules/rewards-pool/RewardsPool.module.scss
+++ b/src/legends/modules/rewards-pool/RewardsPool.module.scss
@@ -1,9 +1,9 @@
 @import '@legends/styles/base.scss';
 
 .wrapper {
-  background: #191a1f;
+  background: $neutral-700;
   border-radius: 1rem;
-  border: 1px solid #6a6f8633;
+  border: 1px solid rgba($neutral-600, 0.2);
   padding: 2rem;
 
   .header {
@@ -17,11 +17,11 @@
       .title {
         font-size: 2rem;
         font-weight: 500;
-        color: #f4f4f7;
+        color: $mainText;
         margin-bottom: 1.5rem;
       }
       .text {
-        color: #8d93ac;
+        color: $secondaryText;
         font-weight: 300;
         font-size: 1.5rem;
         line-height: 2rem;
@@ -33,12 +33,12 @@
       flex-direction: column;
       gap: 0.5rem;
       border-radius: $primaryBorderRadius;
-      border: 1px solid #6a6f8633;
+      border: 1px solid rgba($neutral-600, 0.2);
 
       .label {
         font-size: 1rem;
         font-weight: 500;
-        color: #8d93ac;
+        color: $secondaryText;
       }
       .value {
         font-weight: 500;
@@ -60,14 +60,14 @@
       display: flex;
       flex-direction: column;
       border-radius: $tertiaryBorderRadius;
-      border: 0.0625rem solid #6a6f8633;
+      border: 0.0625rem solid rgba($neutral-600, 0.2);
       border-style: inset;
       background: #1414146b;
 
       .label {
         font-size: 0.75rem;
         font-weight: 500;
-        color: #8e98a8;
+        color: $neutral-450;
       }
       .value,
       .value2 {
@@ -76,7 +76,7 @@
       }
       .value {
         margin-bottom: 0.5rem;
-        color: #00d5ff;
+        color: $blue-400;
       }
       .value2 {
         color: #9d7aff;
