--- a/src/legends/modules/wallet/components/Actions/Actions.module.scss
+++ b/src/legends/modules/wallet/components/Actions/Actions.module.scss
@@ -12,7 +12,7 @@
     margin-bottom: 2rem;
 
     .title {
-        margin-bottom: 0;
+      margin-bottom: 0;
     }
     .buttons {
       display: flex;
@@ -21,7 +21,7 @@
 
       .button,
       .arrowButton {
-        background-color: #191a1f;
+        background-color: $neutral-700;
         border-radius: 0.5rem;
       }
 
