--- a/src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
+++ b/src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
@@ -58,6 +58,17 @@
         color: $neutral-450;
       }
     }
+    .statSkeleton {
+      width: 100%;
+      height: 3.5rem;
+      border-radius: 0.5rem;
+      background-color: rgba($neutral-600, 0.2);
+      margin-bottom: 1rem;
+
+      &:first-child {
+        margin-top: 0.5rem;
+      }
+    }
     .stat {
       padding-top: 1rem;
 
