fix: rewards pool and add loading state

--- a/src/legends/modules/rewards-pool/RewardsPool.module.scss
+++ b/src/legends/modules/rewards-pool/RewardsPool.module.scss
@@ -89,6 +89,12 @@
     }
   }
 
+  .skeleton {
+    width: 100%;
+    height: 26.25rem;
+    background: #1414146b;
+  }
+
   .alert {
     margin-top: 1.5rem;
   }
