--- a/src/legends/components/Page/Page.module.scss
+++ b/src/legends/components/Page/Page.module.scss
@@ -9,7 +9,6 @@
     background-color: $primaryBackground;
     flex: 1;
 
-
     .container {
       padding: 1rem;
       @include container;
@@ -19,7 +18,6 @@
         align-items: center;
         justify-content: space-between;
         @include container;
-
 
         .sidebarButton {
           font-size: 1.25rem;
@@ -44,6 +42,9 @@
     }
     .containerfull {
       max-width: 100%;
+    }
+    .containerresponsive {
+      @include container(true);
     }
   }
 
@@ -77,7 +78,6 @@
   @include breakpoint-down-from(tablet) {
     .scroll {
       padding: 0;
-
     }
   }
 }
