--- a/src/legends/components/Page/Page.module.scss
+++ b/src/legends/components/Page/Page.module.scss
@@ -32,9 +32,6 @@
           text-overflow: ellipsis;
         }
       }
-      .content {
-        padding-top: 4rem;
-      }
     }
 
     .containerlg {
@@ -72,20 +69,12 @@
       &.containerfull {
         padding: 0;
       }
-
-      .container .content {
-        padding-top: 2.5rem;
-      }
     }
   }
 
   @include breakpoint-down-from(tablet) {
     .scroll {
       padding: 0;
-
-      .container .content {
-        padding-top: 1.5rem;
-      }
     }
   }
 }
@@ -96,4 +85,16 @@
   left: 0;
   right: 0;
   z-index: 100;
+}
+
+.content {
+  padding-top: 4rem;
+
+  @include breakpoint-down-from(medium-desktop) {
+    padding-top: 2.5rem;
+  }
+
+  @include breakpoint-down-from(tablet) {
+    padding-top: 1.5rem;
+  }
 }
