fix(rewards): styling claim rewards modal

--- a/src/legends/modules/legends/components/ClaimRewardsModal/ClaimRewardsModal.module.scss
+++ b/src/legends/modules/legends/components/ClaimRewardsModal/ClaimRewardsModal.module.scss
@@ -17,7 +17,7 @@
 .wrapper {
   position: relative;
   width: 34.875rem;
-  height: 34.6875rem;
+  padding-bottom: 1.5rem;
 
   background-size: cover;
   background-color: $neutral-700;
